# sceolang

./: CMakeLists.txt
src/: CMakeLists.txt  test.cpp
